# GameEngine

./: CMakeLists.txt  README.md
assets/: ElfIdle.xcf  WizardFire.xcf  WizardIdle.xcf  WizardSpriteSheetNew.xcf  lvl1_16x16.txt  lvl1_16x16_collisions.txt  terrain.xcf  terrain_collision.xcf
include/: asset_manager.h  collision.h  game.h  game_object.h  map.h  texture_manager.h  vector_2d.h
include/ecs/: animation.h  collider_component.h  components.h  ecs.h  keyboard_controller.h  projectile_component.h  sprite_component.h  tile_component.h  transform_component.h
src/: ECS.cpp  asset_manager.cpp  collision.cpp  game.cpp  game_object.cpp  main.cpp  map.cpp  texture_manager.cpp  vector_2d.cpp
